# witticism

./: .gitignore  CHANGELOG.md  README.md  install.ps1  install.sh  pyproject.toml  upgrade.sh
.github/workflows/: ci.yml  install-test.yml  release.yml
src/witticism/: main.py
src/witticism/core/: audio_capture.py  continuous_transcriber.py  dependency_validator.py  hotkey_manager.py  mock_whisperx.py  transcription_pipeline.py  whisperx_engine.py
src/witticism/platform/: sleep_monitor.py
src/witticism/ui/: about_dialog.py  cuda_health_dialog.py  hotkey_input_widget.py  icon_utils.py  settings_dialog.py  system_tray.py
src/witticism/utils/: config_manager.py  output_manager.py
tests/: test_config_manager.py  test_hotkey_config_integration.py  test_hotkey_fix.py  test_hotkey_manager.py
