[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "witticism"
version = "0.1.0"
description = "WhisperX-powered global transcription and push-to-talk application"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Witticism Contributors"}
]
license = {text = "MIT"}
keywords = ["transcription", "whisperx", "speech-recognition", "push-to-talk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.scripts]
witticism = "witticism.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
witticism = ["assets/*"]