[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "witticism"
version = "0.1.0"
description = "WhisperX-powered global transcription and push-to-talk application"
readme = "README.md"
requires-python = ">=3.9,<3.13"
authors = [
    {name = "Witticism Contributors"}
]
license = {text = "MIT"}
keywords = ["transcription", "whisperx", "speech-recognition", "push-to-talk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "whisperx>=3.1.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "PyQt5>=5.15.0",
    "pyaudio>=0.2.11",
    "pynput>=1.7.0",
    "webrtcvad>=2.0.10",
    "numpy>=1.20.0",
    "pyperclip>=1.8.0",
    "platformdirs>=3.0.0",
]

[project.scripts]
witticism = "witticism.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
witticism = ["assets/*"]